# adk-workshop-training

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  MIGRATION_NOTES.md  PORTAL_README.md  README.md  README_WORKSHOP.md  SETUP_GUIDE.md  WORKSHOP_AGENDA.md  alembic.ini  docker-compose.yml  google_api_setup_guide.md  pyproject.toml  requirements.txt  restart_visual_builder.sh  start_frontend.sh  start_portal.sh  start_visual_builder.sh  stop_visual_builder.sh  test_portal.py  training_portal.py  verify_setup.py
.claude/agents/: gcp-deployment-expert.md  google-adk-expert.md  vertex-ai-agent-deployer.md
.github/: pull_request_template.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
_archive/deprecated-non-adk-compliant/: README.md
agents/faq_agent/: README.md  root_agent.yaml
agents/hello_agent/: README.md  __init__.py  agent.py
agents/npi_lookup/: README.md  root_agent.yaml
agents/router_agent/: README.md  categorizer_agent.yaml  intake_agent.yaml  root_agent.yaml  ticket_agent.yaml
agents/scheduler_agent/: README.md  root_agent.yaml
agents/starter_agent/: README.md  root_agent.yaml
docs/: VISUAL_BUILDER_GUIDE.md  ecosystem.md
docs/api/: README.md
docs/deployment/: PRODUCTION_DEPLOYMENT.md  runbook.md
docs/development/: setup.md
examples/: 02-meeting-room-scheduler.py
exercises/: exercise-1-basic-agent.md  exercise-2-agents-with-tools.md  exercise-3-multi-agent-systems.md
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: setup.ts
infrastructure/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
resources/: cheat-sheet.md  quickstart-guide.md  troubleshooting-guide.md  visual-agent-builder-guide.md
scripts/db/: init.sql
scripts/dev/: seed-data.py  setup-local.sh
scripts/test/: run-all-tests.sh  run-load-tests.sh  run-security-tests.sh  smoke-test.sh  test-integration.sh  validate-deployment.sh
src/: __init__.py
src/agents/: registry.py
src/api/: __init__.py  dependencies.py  main.py
src/core/: audit.py  config.py  constants.py  exceptions.py  security.py  tenancy.py
src/db/: base.py  session.py  tenant_schema.py
src/services/: __init__.py  agent_service.py  announcement_service.py  email_service.py  exercise_service.py  guide_service.py  library_service.py  news_service.py  password_reset_service.py  progress_service.py  (+6 more)
styles/: admin-design-tokens.css  admin-design-tokens.ts  browser-compatibility.css  design-system-migration-guide.md
tasks/: task_000_example_template.md  task_001_rebrand_training_portal.md  task_002_refactor_to_production_gcp_architecture.md  task_002a_frontend_modernization.md  task_002b_visual_builder_integration.md  task_002c_training_platform_setup_module.md  task_002d_authentication_hardening.md  task_002e_frontend_authentication_ui.md  task_002f_staging_operational_completion.md  task_002h_monitoring_alerting_setup.md  task_003_pre_deployment_testing_validation.md  task_005_lightweight_standalone_auth.md  task_006_frontend_deployment_gcp.md  task_007_agent_hub_rebrand_library.md  task_007a_library_enhancements.md  task_007b_admin_content_management.md  task_008_admin_console_page.md  task_009_pdf_upload_library.md  task_011_login_page_redesign.md  task_012_dashboard_knowledge_hub_redesign.md  task_013_dashboard_redesign.md  task_014_agent_template_library.md  technical_analysis_gcp_deployment.md  technical_analysis_google_adk_v1.18.md
templates/: base.html  content.html  example.html  exercise.html  index.html
tests/: conftest.py
(+311 files in other folders)
